<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/visor3d"
    android:background="?attr/colorAppPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.github.sceneview.SceneView
        android:id="@+id/sceneView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="Volver"
        android:background="@drawable/bg_boton_ra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:elevation="8dp"/>

    <ImageButton
        android:id="@+id/btnAyuda"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_help"
        app:tint="@color/fondo1"
        android:background="@drawable/bg_boton_ra"
        android:contentDescription="Ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Título del fósil -->
    <TextView
        android:id="@+id/tvTituloFosil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_vinieta_redondeada"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="Gliptodonte"
        android:textColor="@color/texto1"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/texto_boton_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Panel de controles -->
    <LinearLayout
        android:id="@+id/layoutControles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:background="@drawable/bg_contenedor_herramientas"
        android:layout_marginBottom="20dp"
        android:accessibilityTraversalAfter="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:text="@string/instrucciones_visor"
            android:textColor="@color/texto2"
            android:textSize="@dimen/texto_boton_medium"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/btnRotarArriba"
            android:layout_width="@dimen/boton_alto_medium"
            android:layout_height="@dimen/boton_alto_medium"
            android:background="@drawable/bg_boton_ra"
            android:scaleType="center"
            android:src="@drawable/arrow_up"
            android:contentDescription="@string/rotacion_arr"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <ImageButton
                android:id="@+id/btnRotarIzq"
                android:layout_width="@dimen/boton_alto_medium"
                android:layout_height="@dimen/boton_alto_medium"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_boton_ra"
                android:scaleType="center"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/rotacion_izq"/>

            <ImageButton
                android:id="@+id/btnRotarAbajo"
                android:layout_width="@dimen/boton_alto_medium"
                android:layout_height="@dimen/boton_alto_medium"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/bg_boton_ra"
                android:scaleType="center"
                android:src="@drawable/arrow_down"
                android:contentDescription="@string/rotacion_ab"/>

            <ImageButton
                android:id="@+id/btnRotarDer"
                android:layout_width="@dimen/boton_alto_medium"
                android:layout_height="@dimen/boton_alto_medium"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_boton_ra"
                android:scaleType="center"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/rotacion_der"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>